add cluster display in frontend

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -30,7 +30,9 @@
             <div class="image-container">
                 <img src="./imgs/train/华中科技大学_China.jpeg">
             </div>
-            <div class="description"></div>
+            <div class="cluster-container">
+                
+            </div>
         </div>
         <div class="right-sidebar">
             <div class="control-panel">
